added styles to the page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Is your birthday palindrome</title>
+    <link href="styles.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <h1>Is your birthday palindrome?</h1>
+    <input type="date" />
+    <button>submit</button>
+  </body>
 </html>
