js:added the functionality for to find palindrome

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>Is your birthday palindrome?</h1>
     <input type="date" />
     <button>submit</button>
+    <p id="output"></p>
+    <script src="index.js
+    "></script>
   </body>
 </html>
