styles:added styles to the page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Is your birthday palindrome?</h1>
-    <input type="date" />
-    <button>submit</button>
-    <p id="output"></p>
+    <main class="container">
+      <h1>Is your birthday palindrome?</h1>
+      <input type="date" id="dob" />
+      <button id="submit-btn">submit</button>
+      <p id="output"></p>
+    </main>
     <script src="index.js
     "></script>
   </body>
