styles:added footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
       <input type="date" id="dob" />
       <button id="submit-btn">submit</button>
       <p id="output"></p>
+       <footer class="footer">
+     <div style="font-size: x-large;">Social media presence</div>
+        <section>
+          <a
+            target="_blank"
+            href="https://github.com/gayathri-kayapati"
+            ><img class="icon" src="icons/square-github.svg" alt="github"
+          /></a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/gayathri-kayapati-924885239/"
+            ><img class="icon" src="icons/linkedin.svg" alt="linkdin"
+          /></a>
+          <a
+            target="_blank"
+            href="https://twitter.com/GayathriKayapa1"
+            ><img class="icon" src="icons/square-twitter.svg" alt="twitter"
+          /></a>
+        </section>
+        <p> © | 2022 | Gayathri Kayapati</p>
+      </div>
+    </footer>
     </main>
     <script src="index.js
     "></script>
